--- a/index.html
+++ b/index.html
@@ -15,34 +15,30 @@
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="styles.css">
-    <title>Professional CV - Software Developer</title>
+    <title>Naushad Alam - Software Developer</title>
   </head>
   <body>
     <div class="container">
       <div class="cv-card">
         <!-- Header Section -->
         <header>
-          <h1>John Doe</h1>
-          <h2>Senior Software Developer</h2>
+          <h1>Naushad Alam</h1>
+          <h2>Software Developer</h2>
           <div class="contact-info">
-            <a href="mailto:john@example.com">
+            <a href="mailto:nash.dev97@gmail.com">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
-              john@example.com
-            </a>
-            <a href="tel:+1234567890">
-              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-              +123 456 7890
+              Email
             </a>
             <span>
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
-              San Francisco, CA
+              Delhi, India
             </span>
           </div>
           <div class="social-links">
-            <a href="https://github.com">
+            <a href="https://github.com/nashdev97">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
             </a>
-            <a href="https://linkedin.com">
+            <a href="https://www.linkedin.com/in/nashdev97/">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
             </a>
           </div>
@@ -52,8 +48,8 @@
         <section>
           <h3>Professional Summary</h3>
           <p>
-            Passionate software developer with 8+ years of experience in building scalable web applications.
-            Specialized in React, Node.js, and cloud technologies. Strong focus on writing clean, maintainable
+            Passionate  fresher software developer with experience in DevOps Engineering.
+            Specialized in Java, HTML, CSS, Playwright, Docker, Jenkins. Strong focus on writing clean, maintainable
             code and implementing best practices.
           </p>
         </section>
@@ -62,21 +58,19 @@
         <section>
           <h3>Work Experience</h3>
           <div class="experience-item">
-            <h4>Senior Software Developer</h4>
-            <p class="company-date">Tech Corp Inc. • 2020 - Present</p>
+            <h4>DevOps Engineer Intern</h4>
+            <p class="company-date">Elevate Labs • April 2025 - Present</p>
             <ul>
-              <li>Led development of microservices architecture serving 1M+ users</li>
-              <li>Implemented CI/CD pipelines reducing deployment time by 60%</li>
-              <li>Mentored junior developers and conducted code reviews</li>
+              <li>Automated Code Deployment Using CI/CD Pipeline (GitHub Actions) <a href="https://github.com/nashdev97/nodejs-demo-app"><svg width="20" height="20" viewBox="0 0 21 21" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg></a></li>
+              <li>Created a Simple Jenkins Pipeline for CI/CD <a href="https://github.com/nashdev97/jenkins-demo"><svg width="20" height="20" viewBox="0 0 21 21" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg></a></li>
+              <li>Built a Version-Controlled DevOps Project with Git<a href="https://github.com/nashdev97/git-workflow"><svg width="20" height="20" viewBox="0 0 21 21" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg></a></li>
             </ul>
           </div>
           <div class="experience-item">
-            <h4>Software Developer</h4>
-            <p class="company-date">Innovation Labs • 2018 - 2020</p>
+            <h4>QA Intern</h4>
+            <p class="company-date">J.ai • April 2025 - Present</p>
             <ul>
-              <li>Developed responsive web applications using React and TypeScript</li>
-              <li>Optimized application performance improving load times by 40%</li>
-              <li>Collaborated with UX team to implement design systems</li>
+              <li>Playwright software for test cases of web app and desktop app</li>
             </ul>
           </div>
         </section>
@@ -87,15 +81,15 @@
           <div class="skills-grid">
             <div class="skill-card">
               <h4>Frontend</h4>
-              <p>React, TypeScript, Tailwind CSS</p>
+              <p>HTML, CSS, JS</p>
             </div>
             <div class="skill-card">
               <h4>Backend</h4>
-              <p>Node.js, Express, PostgreSQL</p>
+              <p>SQL</p>
             </div>
             <div class="skill-card">
               <h4>DevOps</h4>
-              <p>Docker, AWS, CI/CD</p>
+              <p>Docker, Jenkins, CI/CD</p>
             </div>
           </div>
         </section>
@@ -104,10 +98,10 @@
         <section>
           <h3>Education</h3>
           <div class="education-details">
-            <h4>BSc in Computer Science</h4>
-            <p class="company-date">University of Technology • 2014 - 2018</p>
+            <h4>B.Tech in Electronics and Communication Engineering </h4>
+            <p class="company-date">Inderprastha Engineering College • 2018 - 2022</p>
             <p>
-              Graduated with First Class Honours. Specialized in Software Engineering and Data Structures.
+              Graduated with First Class Honours. Specialized in  design, development, and testing of electronic devices and systems, including telecommunications, computers, and related industries.
             </p>
           </div>
         </section>
