--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional CV - Experienced Software Developer" />
-    <meta name="keywords" content="CV, Resume, Software Developer, Web Development" />
-    <meta name="author" content="Your Name" />
+    <meta name="description" content="Naushad Alam - Software Developer" />
+    <meta name="keywords" content="CV, Resume, Software Developer, Web Development, DevOps, QA" />
+    <meta name="author" content="Naushad Alam" />
     
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Professional CV - Software Developer" />
-    <meta property="og:description" content="Experienced Software Developer specializing in modern web technologies" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=1200&h=630" />
+    <meta property="og:title" content="Naushad Alam - Software Developer" />
+    <meta property="og:description" content="Experienced Software Developer specializing in DevOps, QA" />
+    <meta property="og:type" content="portfolio" />
+    <!-- <meta property="og:image" content="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=1200&h=630" />-->
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="styles.css">
